# Space

./: .gitignore  .gitmodules  CMakeLists.txt
include/: algebra.h  basis.h  blade.h  flat.h  metric.h  multivector.h  ops.h  product.h  round.h  sum.h  unary.h
include/algebra/: C1.h  E2.h  E3.h  algebra.h
include/algebras/: C1.h  C2.h  C3.h  E2.h  E3.h  E4.h  conformal.h  euclidean.h
include/algebras/conformal/: flat.h  round.h  versor.h
include/basis/: span.h  xform.h
include/basis/xform/: conformal.h  identity.h
include/blade/: bit_product.h  blade.h  derived_blade.h  predicates.h  product.h  scale.h  weight.h  weighted_blade.h
include/blade/product/: bit_product.h  product.h  scale.h
include/metric/: diagonal.h  xform.h
include/ops/: product.h  sum.h  unary.h
scripts/hooks/: pre-commit-clang-format
test/: CMakeLists.txt  basis_xform_conformal.cpp  blade_predicates.cpp  blade_product_bit_product.cpp  blade_product_product.cpp  main.cpp  product.cpp
tools/Space/Space/: main.cpp
tools/Space/Space.xcodeproj/: project.pbxproj
tools/viz/: C1.cpp
tools/viz/app/: app.h  args.cpp  args.h  search_paths.h  shader_io.cpp  shader_io.h  trackball_state.h
tools/viz/dbg/: type.cpp  type.h
tools/viz/draw/: analyzed_program.h  camera.cpp  camera.h  color.cpp  color.h  context.h  draw.cpp  draw.h  mesh.h  mesh_factory.cpp  mesh_factory.h  pipeline.h  primitives.cpp  primitives.h  renderable.cpp  renderable.h  renderable_factory.cpp  renderable_factory.h  shader_preprocessor.h  surface.h  trackball.h  uniform_map.h
tools/viz/geom/: circle.h  line.h  line_segment.h  matrix3.h  matrix4.h  primitives.h  ray.h  sphere.h
tools/viz/gl/: attribute.h  buffer.h  framebuffer.h  primitives.cpp  primitives.h  program.h  renderbuffer.h  shader.h  texture.h  uniform.h  vertex_array.h
tools/viz/shaders/: color-texture.fs  color-texture.vs  color.fs  color.vs  ray.glsl  sphere-trace.fs  sphere-trace.vs  sphere-vertex.glsl  sphere.glsl  trace-point.fs  trace-rotor.fs  trace-rotor.vs  trace-sphere-imaginary.fs  trace-sphere-imaginary.vs  trace-sphere-real.fs  trace-sphere-real.vs  wireframe.fs  wireframe.gs  wireframe.vs
tools/viz/shaders/source/: fs_color.sc
